feat: hashmap to object, ai 실패 시 벡엔드 기본 루틴 전달 뼈대